<resources>
    <string name="app_name">Mission Connected</string>
    <string name="title_home">Dashboard</string>
    <string name="title_clubs">My Clubs</string>
    <string name="title_publish">Publish</string>
    <string name="my_clubs">My Clubs</string>
    <string name="listevents">List Events</string>
    <string name="going">Going</string>
    <string name="all">All</string>
    <string name="signed_out">signout</string>
    <string name="google_status_fmt">email</string>
    <string name="firebase_status_fmt">userid</string>
    <string name="home_navigation_drawer_open">Open Navigation drawer</string>
    <string name="home_navigation_drawer_close">Close Navigation drawer</string>
    <string name="support_message">Mission Connect aims to facilitate communication between school clubs and make it easier for clubs to communicate with their members. A secondary goal is to make it much easier for schools to manage the club registration process, as we also include an easy way to tabulate club information.\n\n For further information, visit:</string>
    <string name="linkwebite">
        <a href="https://avaliveru.wixsite.com/missionconnect">\nhttps://avaliveru.wixsite.com/missionconnect</a>
    </string>
    <string name="support_outro">\nAny enquiries please contact missionconnectedapp@gmail.com</string>
    <string name="invalid_loginid_alert">Invalid email for this school. Please login with your FUSD GAFE Account.</string>
    <string name="firebase_auth_error">Firebase authentication failure. Please try again.</string>
    <string name="general_login_failure_error">Sign In failed. Please try again.</string>
    <string name="eventcannotgo">Can\'t Go</string>
    <string name="eventcango">I\'m Going!</string>
    <string name="club_unsubscribe">Unsubscribe</string>
    <string name="club_subscribe">Subscribe</string>
    <string name="empty_club_alert">Please select a club from My Clubs with Officer Rank.</string>
    <string name="empty_officer_alert">Please select Pick Officers.</string>
    <string name="empty_club_preview_alert">Please enter Club Preview.</string>
    <string name="empty_club_desc_alert">Please enter Club Description.</string>
    <string name="empty_club_image_alert">Please select Club Image.</string>
    <string name="club_updated_succes_alert">Club Information updated successfully.</string>
    <string name="empty_eventclub_alert">Please select an Event Club. Note it is an auto fill text field.</string>
    <string name="empty_event_name_alert">Please enter an Event Name.</string>
    <string name="empty_event_date_alert">Please select an Event Date.</string>
    <string name="empty_event_preview_alert">Please enter an Event Preview.</string>
    <string name="empty_event_desc_alert">Please enter an Event Description.</string>
    <string name="empty_event_image_alert">Please select an Event Image.</string>
    <string name="event_publish_success_alert">Event published successfully.</string>
    <string name="empty_school_register_error">Please select a valid school you want to Register with.</string>
    <string name="pick_school_message_2">Please note: You cannot change your school once the school is picked at the time of registration.</string>
    <string name="pick_school_message_1">Pick a school below to show you the most relevant club information at your school.</string>
    <string name="pick_your_school">Pick Your School</string>

    <string name="no_clubs"><![CDATA[<b>You are not a part of any clubs!</b><br\><br\>
   Click Join Clubs for a list of all clubs available at your school.]]></string>
    <string name="no_going_events"><![CDATA[<b>You are not going to any events!</b><br\><br\>
   RSVP to any of your club events to have it show up here!]]></string>
    <string name="no_all_events"><![CDATA[<b>You clubs don\'t have any events in the future!</b><br\><br\>
   This area will show all of the events from clubs that you have signed up for!]]></string>
    <string name="no_myclub_events"><![CDATA[<b>You are not an officer of any clubs!</b><br\><br\>
   If you would like to propose a new club at our school, please contact ASB and follow the school guidelines for club formation!]]></string>
    <string name="no_club_events"><![CDATA[<b>This club has no events!</b><br\><br\>
   If you are an officer of this club please go to Publish tab to add new events!]]></string>
</resources>