<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.missionconnected.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_clubs"
        android:name="com.example.missionconnected.ui.clubs.DashboardFragment"
        android:label="@string/title_clubs"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_publish"
        android:name="com.example.missionconnected.ui.publish.NotificationsFragment"
        android:label="@string/title_publish"
        tools:layout="@layout/fragment_notifications" />
</navigation>