<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/title_home" />
        <item
            android:id="@+id/navigation_clubs"
            android:icon="@drawable/ic_baseline_people_24"
            android:title="@string/title_clubs" />
        <item
            android:id="@+id/navigation_publish"
            android:icon="@drawable/ic_baseline_publish_24"
            android:title="@string/title_publish" />
        <item
            android:id="@+id/navigation_drawer_support"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="Support" />
        <item
            android:id="@+id/navigation_drawer_policy"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="Privacy Policy" />
        <item
            android:id="@+id/navigation_drawer_version"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="Version 1.0" />
      <item
            android:id="@+id/navigation_drawer_signout"
            android:icon="@drawable/ic_baseline_people_24"
            android:title="LogOut" />
    </group>

</menu>